--- a/tecidos.html
+++ b/tecidos.html
@@ -149,7 +149,7 @@
 <div class="row">
     <div class="media-object stack-for-small callout" id="tecidoA">
         <div class="media-object-section">
-            <img src="images/tecidos/tecido-amostras/maui-plus-160.png" width="500">
+            <img src="images/tecidos/tecido-amostras/maui-plus-160.jpg" width="500">
         </div>
         <div class="media-object-section">
             <h5 class="titulo">MicroFibra Pesada</h5>
@@ -189,7 +189,7 @@
     </div>
     <div class="media-object stack-for-small callout" id="tecidoB">
         <div class="media-object-section">
-            <img src="images/tecidos/tecido-amostras/techno-light-160.png" width="500">
+            <img src="images/tecidos/tecido-amostras/techno-light-160.jpg" width="500">
         </div>
         <div class="media-object-section">
             <h5 class="titulo">MicroFibra Leve</h5>
@@ -226,7 +226,7 @@
     </div>
     <div class="media-object stack-for-small callout" id="tecidoC">
         <div class="media-object-section">
-            <img src="images/tecidos/tecido-amostras/gloss-light.png" width="500">
+            <img src="images/tecidos/tecido-amostras/gloss-light.jpg" width="500">
         </div>
         <div class="media-object-section">
             <h5 class="titulo">Gloss Light</h5>
@@ -264,7 +264,7 @@
     </div>
     <div class="media-object stack-for-small callout" id="tecidoD">
         <div class="media-object-section">
-            <img src="images/tecidos/tecido-amostras/crepe-de-chine.png" width="500">
+            <img src="images/tecidos/tecido-amostras/crepe-de-chine.jpg" width="500">
         </div>
         <div class="media-object-section">
             <h5 class="titulo">Crepe de Chine</h5>
@@ -302,7 +302,7 @@
     </div>
     <div class="media-object stack-for-small callout" id="tecidoE">
         <div class="media-object-section">
-            <img src="images/tecidos/tecido-amostras/hi-multi-chiffon-classic.png" width="500">
+            <img src="images/tecidos/tecido-amostras/hi-multi-chiffon-classic.jpg" width="500">
         </div>
         <div class="media-object-section">
             <h5 class="titulo">Chiffon Classic</h5>
@@ -340,7 +340,7 @@
     </div>
     <div class="media-object stack-for-small callout" id="tecidoF">
         <div class="media-object-section">
-            <img src="images/tecidos/tecido-amostras/oxford-stretch-tinto.png" width="500">
+            <img src="images/tecidos/tecido-amostras/oxford-stretch-tinto.jpg" width="500">
         </div>
         <div class="media-object-section">
             <h5 class="titulo">Oxford Strech</h5>
@@ -381,7 +381,7 @@
     </div>
     <div class="media-object stack-for-small callout" id="tecidoG">
         <div class="media-object-section">
-            <img src="images/tecidos/tecido-amostras/malha-newprene.png" width="500">
+            <img src="images/tecidos/tecido-amostras/malha-newprene.jpg" width="500">
         </div>
         <div class="media-object-section">
             <h5 class="titulo">Malha Newprene</h5>
@@ -412,7 +412,7 @@
     </div>
     <div class="media-object stack-for-small callout" id="tecidoH">
         <div class="media-object-section">
-            <img src="images/tecidos/tecido-amostras/ergonomic-flex.png" width="500">
+            <img src="images/tecidos/tecido-amostras/ergonomic-flex.jpg" width="500">
         </div>
         <div class="media-object-section">
             <h5 class="titulo">Ergonomic Flex</h5>
