--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
-
 <!doctype html>
 <html class="no-js" lang="pt-br" dir="etl">
 <head>
     <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="google-site-verification" content="google1a06754d50be5d0d" />
+    <meta property="og:title" content="Rossina Estamparia Digital - Tecidos - Camisas - Camisetas - Serviços estamparia digital">
+    <meta property="og:description" content="camisetas masculinas customizadas, camisetas masculinas personalizadas, tecidos para estampar. camisas polos, baby look, camisas infantis, serviços de estamparia digital">
+    <meta property="og:site_name" content="Rossina Estamparia Digital">
+    <meta property="og:url" content="http://rossinaestamparia.com.br/" />
+    <meta property="og:type" content="website">
     <title>Rossina Estamparia Digital - Tecidos - Camisas - Camisetas - Personalizadas - Customizadas</title>
     <link rel="stylesheet" href="components/foundation-sites/dist/foundation.min.css">
     <link rel="alternate" hreflang="pt-br" href="http://rossinaestamparia.com.br/" />
     <link rel="stylesheet" href="css/app.css">
     <link href='http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css' rel='stylesheet' type='text/css'>
-
 </head>
 <body>
 
@@ -163,8 +168,8 @@
 <div class="row small-up-1 medium-up-2 large-up-3">
     <div class="column">
         <div class="callout">
-            <h3 class="text-center"><a href="camisa-camiseta.html">Camisetas</a> </h3>
-            <p><a href="camisa-camiseta.html"><img src="images/estamparia/camisas-personalizadas.jpg" alt="image of a planet called Pegasi B"></a></p>
+            <h3 class="text-center"><a href="camisetas.html">Camisetas</a> </h3>
+            <p><a href="camisetas.html"><img src="images/estamparia/camisas-personalizadas.jpg" alt="image of a planet called Pegasi B"></a></p>
             <p class="lead">REVENDA CAMISETAS PERSONALIZADAS SOB DEMANDA</p>
             <p class="subheader">Você sabia que o mercado de camisas personalizadas ainda está começando?<br><br>
                 VENHA FAZER PARTE CONOSCO DESTE CRESCIMENTO !!!<br><br>
@@ -187,8 +192,8 @@
     </div>
     <div class="column">
         <div class="callout">
-            <h3 class="text-center"><a href="tecido.html">TECIDOS</a></h3>
-            <p><a href="tecido.html"><img src="images/estamparia/estamparia.jpg" alt="image of a planet called Pegasi B"></a> </p>
+            <h3 class="text-center"><a href="tecidos.html">TECIDOS</a></h3>
+            <p><a href="tecidos.html"><img src="images/estamparia/estamparia.jpg" alt="image of a planet called Pegasi B"></a> </p>
             <p class="lead">PERSONALIZE TECIDOS PARA SUA PRODUÇÃO OU REVENDA</p>
             <p class="subheader">Você sabia que a fibra de poliéster hoje é a mais vendida no Brasil e no mundo e são fabricados todos os tipos de
                 tecidos para fabricar qualquer produto? fonte: <a data-toggle="exampleModal3">http://www.textilia.net</a></p>
