--- a/logistica.html
+++ b/logistica.html
@@ -2,8 +2,16 @@
 <html class="no-js" lang="pt-br" dir="etl">
 <head>
     <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="google-site-verification" content="google1a06754d50be5d0d" />
+    <meta property="og:title" content="Rossina Estamparia Digital - Tecidos - Camisas - Camisetas - Serviços estamparia digital">
+    <meta property="og:description" content="camisetas masculinas customizadas, camisetas masculinas personalizadas, tecidos para estampar. camisas polos, baby look, camisas infantis, serviços de estamparia digital">
+    <meta property="og:site_name" content="Rossina Estamparia Digital">
+    <meta property="og:url" content="http://rossinaestamparia.com.br/" />
+    <meta property="og:type" content="website">
     <title>Logística para ecommerce de camisas personalizadas (customizadas) e camisetas personalizadas (customizadas)</title>
+    <link rel="alternate" hreflang="pt-br" href="http://rossinaestamparia.com.br/" />
     <link rel="stylesheet" href="components/foundation-sites/dist/foundation.min.css">
     <link rel="stylesheet" href="css/app.css">
     <link href='http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css' rel='stylesheet' type='text/css'>
