--- a/mobile/index.html
+++ b/mobile/index.html
@@ -16,12 +16,26 @@
                 <li><a href="index.html" class="ui-btn-active ui-state-persist">Home</a></li>
                 <li><a href="areas.html">Áreas</a></li>
                 <li><a href="equipe.html">Equipe</a></li>
-            </ul>
         </div> <!-- /navbar -->
     </div> <!-- /header -->
 
     <div data-role="content">
         <h1>Competência a seu serviço</h1>
+        <p>Nosso escritório foi montado com o objetivo de atendê-los melhor, provendo um atendimento personalizado, com apoio administrativo informatizado, no qual possibilita ao cliente acompanhar o andamento de seus processos através de relatórios detalhados, emitidos regularmente.</p><h1>Competência a seu serviço</h1>
+        <p>Nosso escritório foi montado com o objetivo de atendê-los melhor, provendo um atendimento personalizado, com apoio administrativo informatizado, no qual possibilita ao cliente acompanhar o andamento de seus processos através de relatórios detalhados, emitidos regularmente.</p><h1>Competência a seu serviço</h1>
+        <p>Nosso escritório foi montado com o objetivo de atendê-los melhor, provendo um atendimento personalizado, com apoio administrativo informatizado, no qual possibilita ao cliente acompanhar o andamento de seus processos através de relatórios detalhados, emitidos regularmente.</p><h1>Competência a seu serviço</h1>
+        <p>Nosso escritório foi montado com o objetivo de atendê-los melhor, provendo um atendimento personalizado, com apoio administrativo informatizado, no qual possibilita ao cliente acompanhar o andamento de seus processos através de relatórios detalhados, emitidos regularmente.</p><h1>Competência a seu serviço</h1>
+        <p>Nosso escritório foi montado com o objetivo de atendê-los melhor, provendo um atendimento personalizado, com apoio administrativo informatizado, no qual possibilita ao cliente acompanhar o andamento de seus processos através de relatórios detalhados, emitidos regularmente.</p><h1>Competência a seu serviço</h1>
+        <p>Nosso escritório foi montado com o objetivo de atendê-los melhor, provendo um atendimento personalizado, com apoio administrativo informatizado, no qual possibilita ao cliente acompanhar o andamento de seus processos através de relatórios detalhados, emitidos regularmente.</p><h1>Competência a seu serviço</h1>
+        <p>Nosso escritório foi montado com o objetivo de atendê-los melhor, provendo um atendimento personalizado, com apoio administrativo informatizado, no qual possibilita ao cliente acompanhar o andamento de seus processos através de relatórios detalhados, emitidos regularmente.</p><h1>Competência a seu serviço</h1>
+        <p>Nosso escritório foi montado com o objetivo de atendê-los melhor, provendo um atendimento personalizado, com apoio administrativo informatizado, no qual possibilita ao cliente acompanhar o andamento de seus processos através de relatórios detalhados, emitidos regularmente.</p><h1>Competência a seu serviço</h1>
+        <p>Nosso escritório foi montado com o objetivo de atendê-los melhor, provendo um atendimento personalizado, com apoio administrativo informatizado, no qual possibilita ao cliente acompanhar o andamento de seus processos através de relatórios detalhados, emitidos regularmente.</p><h1>Competência a seu serviço</h1>
+        <p>Nosso escritório foi montado com o objetivo de atendê-los melhor, provendo um atendimento personalizado, com apoio administrativo informatizado, no qual possibilita ao cliente acompanhar o andamento de seus processos através de relatórios detalhados, emitidos regularmente.</p><h1>Competência a seu serviço</h1>
+        <p>Nosso escritório foi montado com o objetivo de atendê-los melhor, provendo um atendimento personalizado, com apoio administrativo informatizado, no qual possibilita ao cliente acompanhar o andamento de seus processos através de relatórios detalhados, emitidos regularmente.</p><h1>Competência a seu serviço</h1>
+        <p>Nosso escritório foi montado com o objetivo de atendê-los melhor, provendo um atendimento personalizado, com apoio administrativo informatizado, no qual possibilita ao cliente acompanhar o andamento de seus processos através de relatórios detalhados, emitidos regularmente.</p><h1>Competência a seu serviço</h1>
+        <p>Nosso escritório foi montado com o objetivo de atendê-los melhor, provendo um atendimento personalizado, com apoio administrativo informatizado, no qual possibilita ao cliente acompanhar o andamento de seus processos através de relatórios detalhados, emitidos regularmente.</p><h1>Competência a seu serviço</h1>
+        <p>Nosso escritório foi montado com o objetivo de atendê-los melhor, provendo um atendimento personalizado, com apoio administrativo informatizado, no qual possibilita ao cliente acompanhar o andamento de seus processos através de relatórios detalhados, emitidos regularmente.</p><h1>Competência a seu serviço</h1>
+        <p>Nosso escritório foi montado com o objetivo de atendê-los melhor, provendo um atendimento personalizado, com apoio administrativo informatizado, no qual possibilita ao cliente acompanhar o andamento de seus processos através de relatórios detalhados, emitidos regularmente.</p><h1>Competência a seu serviço</h1>
         <p>Nosso escritório foi montado com o objetivo de atendê-los melhor, provendo um atendimento personalizado, com apoio administrativo informatizado, no qual possibilita ao cliente acompanhar o andamento de seus processos através de relatórios detalhados, emitidos regularmente.</p>
     </div> <!-- /content -->
 
