--- a/mobile/index.html
+++ b/mobile/index.html
@@ -8,132 +8,35 @@
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 </head>
 <body>
-<div data-role="page" id="home">
-    <div data-role="header">
-        <h1>Musse Neto e Silva <br /> Advogados</h1>
+<div data-role="page">
+    <div data-role="header" data-position="fixed">
+        <h1>Barra de navegação</h1>
         <div data-role="navbar">
             <ul>
-                <li><a href="#home" class="ui-btn-active ui-state-persist">Home</a></li>
-                <li><a href="#areas">Áreas</a></li>
-                <li><a href="#equipe">Equipe</a></li>
+                <li><a href="#" class="ui-btn-active  ui-state-persist">Um</a></li>
+                <li><a href="#">Dois</a></li>
+                <li><a href="#">Três</a></li>
             </ul>
-        </div> <!-- /navbar -->
-    </div> <!-- /header -->
+        </div><!-- /navbar -->
+    </div><!-- /header -->
 
     <div data-role="content">
-        <h1>Competência a seu serviço</h1>
-        <p>Nosso escritório foi montado com o objetivo de atendê-los melhor, provendo um atendimento personalizado, com apoio administrativo informatizado, no qual possibilita ao cliente acompanhar o andamento de seus processos através de relatórios detalhados, emitidos regularmente.</p>
-    </div> <!-- /content -->
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi eleifend, purus quis laoreet faucibus, ante augue malesuada mi, id rhoncus augue lorem eget elit. Ut sollicitudin sodales purus. Phasellus libero felis, blandit nec, commodo ut, imperdiet ut, nibh. Suspendisse potenti. Donec ullamcorper cursus dolor. Duis vitae ipsum. Maecenas dapibus hendrerit diam. Morbi varius, massa id pretium accumsan, nunc lorem congue libero, ut euismod metus libero id nulla. Duis posuere odio sed velit vulputate venenatis. Suspendisse et dui ac metus auctor fringilla. Curabitur interdum augue a pede.</p>
+        <p>Curabitur hendrerit erat ut augue. Cras gravida. Mauris consequat aliquam leo. Aenean non tortor id metus aliquet consectetuer. Quisque sodales lectus ac orci. Donec eleifend fringilla mi. Vivamus vel massa. Aenean interdum pellentesque sem. Nulla pellentesque felis et tortor. Duis cursus, dui non dictum tincidunt, wisi ipsum mollis wisi, nec ornare velit ipsum eget enim. In sed felis. Phasellus condimentum sodales nulla. Etiam orci leo, rutrum malesuada, congue vel, fringilla vitae, lorem. Pellentesque ligula.</p>
+
+        <p>Pellentesque sapien. Sed purus sapien, eleifend ac, volutpat ac, molestie eget, massa. Nam a nibh. Nulla facilisi. Mauris ac metus. Donec porttitor, turpis et sollicitudin vehicula, nunc dui dignissim arcu, euismod hendrerit arcu est quis elit. In quam tellus, auctor in, dignissim at, euismod gravida, lacus. Nullam dui. Donec sit amet eros varius lacus laoreet vestibulum. Phasellus vestibulum vehicula velit. Vestibulum malesuada lectus eu urna.</p>
+
+        <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam in eros. Aliquam mattis est et arcu. Duis scelerisque tempus diam. Morbi accumsan, dui sed auctor tincidunt, orci wisi imperdiet lacus, ut tincidunt arcu wisi vitae erat. Curabitur a lacus. Suspendisse odio nulla, elementum vitae, laoreet ac, rhoncus ut, lectus. Phasellus a tellus eleifend odio pellentesque condimentum. Etiam hendrerit metus ut mi. Quisque purus lorem, dictum dapibus, lacinia in, consequat non, diam. Nulla vulputate urna ac ligula. Mauris consectetuer lorem at dui. Phasellus semper risus sed ipsum varius laoreet. Ut tempus nisl eget risus. Nam felis.</p>
+
+        <p>Nulla facilisi. Duis euismod, lacus et cursus volutpat, dui arcu porttitor diam, at gravida nibh justo non erat. Cras vel sem eget erat pretium facilisis. Nullam et diam sed diam congue nonummy. Sed auctor dignissim turpis. Suspendisse fringilla diam eu urna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla semper augue et lorem commodo vehicula. Cras sagittis dictum nisl. Suspendisse dapibus euismod libero. Nulla vel wisi venenatis est ornare placerat. Proin purus. In vehicula pede quis erat dapibus iaculis. Aenean at neque eu odio pellentesque molestie. Nullam quis justo. Duis porta, nisl faucibus porttitor pulvinar, neque erat tristique est, in fringilla leo neque et purus. Maecenas pellentesque lectus in odio.</p>
+
+        <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus sapien augue, euismod nec, aliquet nec, porttitor ut, libero. In id wisi vel diam pellentesque blandit. Duis eu magna eget est molestie dictum. Aenean vitae ipsum gravida nisl sodales egestas. Integer et quam. In et libero. Vestibulum quis dolor. Duis blandit suscipit tortor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur eu felis. Phasellus wisi. Suspendisse potenti. Morbi libero odio, dapibus eu, commodo non, feugiat eget, metus. Suspendisse tempus purus et lorem. Quisque dictum malesuada felis. Quisque condimentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin tincidunt libero non mi. Ut velit est, accumsan ut, euismod eget, venenatis nec, leo.</p>
+    </div><!-- /content -->
 
     <div data-role="footer" data-position="fixed">
-        <div data-role="navbar">
-            <ul>
-                <li><a href="artigos.html">Artigos</a></li>
-                <li><a href="localizacao.html">Localização</a></li>
-                <li><a href="contato.html">Contato</a></li>
-            </ul>
-        </div> <!-- /navbar -->
-    </div> <!-- /footer -->
-</div> <!-- /page -->
-
-<div data-role="page" id="areas">
-    <div data-role="header">
-        <h1>Musse Neto e Silva <br /> Advogados</h1>
-        <div data-role="navbar">
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#areas"  class="ui-btn-active ui-state-persist">Áreas</a></li>
-                <li><a href="#equipe">Equipe</a></li>
-            </ul>
-        </div> <!-- /navbar -->
-    </div> <!-- /header -->
-
-    <div data-role="content">
-        <p>Estamos capacitados para oferecer os serviços advocatícios nas áreas de:</p>
-        <ul>
-            <li><strong>DIREITO ADMINISTRATIVO</strong>: Assessoria em licitações públicas, apresentação de defesas e impugnações em processos administrativos, ações judiciais relacionadas a causas administrativas.</li>
-            <li><strong>DIREITO AMBIENTAL</strong>: Defesas em, processos judiciais e administrativos.</li>
-            <li><strong>DIREITO CIVIL</strong>: Propositura de medidas judiciais e apresentação de defesas, com objetivo de reparação por danos materiais e morais, ou de resguardo dos interesses do cliente, relativo a responsabilidade civil.
-                <ul>
-                    <li><em>Contratos</em>: elaboração, revisão e análise de contratos de natureza civil (locação, doação, arrendamento, compra e venda, etc.), todos os tipos de contratos.</li>
-
-                    <li><em>Contencioso</em>: propositura e defesa de ações cíveis, de cobrança, de execução, de usucapião, de indenização, sustação de protesto, despejo e outras medidas judiciais, reivindicatórias, etc.</li>
-                    <li><em>Seguros</em>: Ressarcimento de seguro obrigatório – DPVAT. Cobrança de seguro.</li>
-                </ul>
-            </li>
-            <li><strong>DIREITO DO CONSUMIDOR</strong>: Reparação de danos por vício de produto ou serviço e demandas correlatas, indenizações por inclusão no SPC, SERASA.</li>
-            <li><strong>DIREITO DE FAMÍLIA</strong>: Adoção, tutela de menores, emancipação, investigação de paternidade divórcio, pedidos de alvará, ações de reconhecimento e dissolução (partilha, pensão, guarda e etc.) de união estável e união homoafetiva, judicial e extrajudicial.</li>
-            <li><strong>DIREITO EMPRESARIAL</strong>: Assessoramento legal em transações empresariais em geral.</li>
-
-            <li><strong>DIREITO MARÍTIMO</strong>: Mandados de segurança para liberação de cargas, protesto marítimo, defesas administrativas.</li>
-            <li><strong>DIREITO PENAL</strong>: Defesas criminais, recursos, atuação junto aos órgãos policiais, com pedidos de urgência, tais como, habeas corpus, relaxamento de prisão, pedido de liberdade provisória, de fiança, etc.</li>
-            <li><strong>DIREITO PREVIDENCIÁRIO</strong>: Revisão e restabelecimento de aposentadoria, pensão por morte, auxilio acidente e doença, atuação judicial.</li>
-            <li><strong>DIREITO TRABALHISTA</strong>: Reclamações e defesas trabalhistas; assessoria e consultoria trabalhista.</li>
-            <li><strong>DIREITO TRIBUTÁRIO</strong>: Contencioso administrativo e judicial (Mandado de Segurança) na esfera federal, estadual e municipal; envolvendo impostos, taxas, contribuições.</li>
-        </ul>
-    </div> <!-- /content -->
-
-    <div data-role="footer" data-position="fixed">
-        <div data-role="navbar">
-            <ul>
-                <li><a href="artigos.html">Artigos</a></li>
-                <li><a href="localizacao.html">Localização</a></li>
-                <li><a href="contato.html">Contato</a></li>
-            </ul>
-        </div> <!-- /navbar -->
-    </div> <!-- /footer -->
-</div> <!-- /page -->
-
-<div data-role="page" id="equipe">
-    <div data-role="header">
-        <h1>Musse Neto e Silva <br /> Advogados</h1>
-        <div data-role="navbar">
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#areas">Áreas</a></li>
-                <li><a href="#equipe" class="ui-btn-active ui-state-persist">Equipe</a></li>
-            </ul>
-        </div> <!-- /navbar -->
-    </div> <!-- /header -->
-
-    <div data-role="content">
-        <dl>
-            <dt><strong>JORGE MUSSE NETO</strong> – OAB/SC 5.145/B</dt>
-            <dd>Natural de São Francisco do Sul, SC, advogado inscrito na OAB/SC sob nº 5.145/B, desde 30/09/1985.</dd>
-            <dd>Formado em Direito pela Faculdade de Direito de Curitiba, em 22 de janeiro de 1976;</dd>
-            <dd>A inscrição original na OAB/PR sob nº 6.722; (12/1976 até 05/1985);</dd>
-            <dd>Inscrição da OAB/RS sob nº 12.971; (período 09/1980 até 06/1993);</dd>
-            <dd>Advogado da Administração do Porto de São Francisco do Sul (30/04/1985 até 09/09/1988);</dd>
-            <dd>Advogado do OGMO/SFS (1997/2003);</dd>
-
-            <dd>Advogado do SINPOSF de (1996/2005);</dd>
-            <dd>Assessor Jurídico da Câmara de Vereadores de São Francisco do Sul, (1987/1989; 1993/1996 e 2009/2010);</dd>
-            <dd>Presidente da 37ª Subseção da OAB/SC no triênio 2007/2009;</dd>
-            <dd>Secretário do IIIº Tribunal de Ética e Disciplina da OAB/SC 2010/2012;</dd>
-            <dd>Atuou, com escritório próprio, em Curitiba/PR e Porto Alegre/RS;</dd>
-            <dd>Frequentou diversos cursos e congressos de Direito Trabalhista.</dd>
-        </dl>
-
-        <dl>
-            <dt><strong>DANIELA SILVA</strong> – OAB/SC 12.345/M</dt>
-            <dd>Natural de São Francisco do Sul, SC, advogada inscrita na OAB/SC sob nº 12.345/M, desde 01/12/2001.</dd>
-            <dd>Formada em Direito pela Universidade Maujor, em Novembro de 2000;</dd>
-            <dd>Advogada responsável pelo site do Maujor, no quinquênio 2007/2011;</dd>
-            <dd>Frequentou cursos da Escola de Advocacia, de Memphis.</dd>
-        </dl>
-    </div> <!-- /content -->
-
-    <div data-role="footer" data-position="fixed">
-        <div data-role="navbar">
-            <ul>
-                <li><a href="artigos.html">Artigos</a></li>
-                <li><a href="localizacao.html">Localização</a></li>
-                <li><a href="contato.html">Contato</a></li>
-            </ul>
-        </div> <!-- /navbar -->
-    </div> <!-- /footer -->
-</div> <!-- /page -->
-</div> <!-- /page -->
+        <small class="ui-bar">&#169; 2013 Livro jQuery Mobile do Maujor &#8212; 2<sup>a.</sup> edição</small>
+    </div><!-- /footer -->
+</div><!-- /page -->
 <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 </body>
