--- a/mobile/index.html
+++ b/mobile/index.html
@@ -14,18 +14,18 @@
     </div><!-- /header -->
 
     <div data-role="content">
-        <ul data-role="listview" data-inset="true" data-theme="b">
-            <li><h3>MENU</h3></li>
-            <li data-theme="a"><h4>Camisetas - Camisas</h4></li>
+        <ul data-role="listview" data-inset="true" data-theme="c">
+            <li data-iconpos="left"><h3>MENU</h3></li>
+            <li data-theme="b"><h4>Camisetas - Camisas - Masculinas - Femininas - Infantis</h4></li>
             <li><a href="estoque.html">
-                <h3>Camisas - Camisetas</h3>
-                <p>Responsável: Cláudio Lemos</p>
-                <p>Atualizado em: 30/11/2011</p>
+                <h3>CAMISETAS LISAS PARA PERSONALIZAÇÃO SOB DEMANDA</h3>
+                <p>IMPRESSÃO DIGITAL NAS POSIÇÕES: <br>FRENTE-COSTAS-MANGAS <br>NO FORMATO MÁXIMO 35CM X 45CM EM BASES CLARAS OU ESCURAS.</p>
+                <p>Clique aqui e saiba mais</p>
                 <p class="ui-li-aside"><strong>8:24h</strong></p>
             </a>
                 <span class="ui-li-count">12</span>
             </li>
-            <li data-theme="a"><h4>Tecidos</h4></li>
+            <li data-theme="b"><h4>Tecidos</h4></li>
             <li><a href="defeito.html">
                 <h3 class="">Tecidos</h3>
                 <p>Responsável: Leandro Cunha</p>
@@ -34,7 +34,7 @@
             </a>
                 <span class="ui-li-count">4</span>
             </li>
-            <li data-theme="a"><h4>Serviços de estamparia digital</h4></li>
+            <li data-theme="b"><h4>Serviços de estamparia digital</h4></li>
             <li><a href="devolvida.html">
                 <h3>Serviços Estamparia </h3>
                 <p>Responsável: Rubens Prates</p>
@@ -43,7 +43,7 @@
             </a>
                 <span class="ui-li-count">2</span>
             </li>
-            <li data-theme="a"><h4>Nossos vídeos</h4></li>
+            <li data-theme="b"><h4>Nossos vídeos</h4></li>
             <li><a href="devolvida.html">
                 <h3>Vídeos </h3>
                 <p>Responsável: Rubens Prates</p>
@@ -52,7 +52,7 @@
             </a>
                 <span class="ui-li-count">2</span>
             </li>
-            <li data-theme="a"><h4>Estampas para tecido</h4></li>
+            <li data-theme="b"><h4>Estampas para tecido</h4></li>
             <li><a href="devolvida.html">
                 <h3>Estampas para tecidos </h3>
                 <p>Responsável: Rubens Prates</p>
@@ -61,7 +61,7 @@
             </a>
                 <span class="ui-li-count">2</span>
             </li>
-            <li data-theme="a"><h4>Estampas para camisetas</h4></li>
+            <li data-theme="b"><h4>Estampas para camisetas</h4></li>
             <li><a href="devolvida.html">
                 <h3>Estampas para camisetas </h3>
                 <p>Responsável: Rubens Prates</p>
@@ -76,12 +76,12 @@
     <div data-role="footer" data-position="fixed" data-theme="b">
         <div data-role="navbar">
             <ul>
-                <li><a data-iconpos="top" href="#"><h3>Home</h3></a></li>
-                <li><a href="#"><h3>Sobre Nós</h3></a></li>
-                <li><a href="#"><h3>Contatos</h3></a></li>
+                <li><a href="#" data-iconpos="top" data-icon="home">Home</a></li>
+                <li><a href="#" data-iconpos="top" data-icon="navigation">Sobre Nós</a></li>
+                <li><a href="#" data-iconpos="top" data-icon="phone">Contatos</a></li>
             </ul>
         </div><!-- /navbar -->
-        <h1>&#169; 2016 Rossina Estamparia Digital</h1>
+        <h1><span>&#169; 2016 Rossina Estamparia Digital - Todos os direitos reservados</span></h1>
     </div><!-- /footer -->
 </div><!-- /page -->
 <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
