commit formulario de agenda

--- a/form.html
+++ b/form.html
@@ -31,13 +31,22 @@
         <br>
         <div class="medium-6 columns">
             <label for="Turno">Turno :</label>
-            <input type="text" name="Turno" class="form-control" placeholder="digite o turno, manhã ou tarde"/>
+            <label class="radio-inline">
+                <input type="radio" name="Turno" id="inlineRadio1" value="manha">Manhã
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="Turno" id="inlineRadio2" value="tarde">Tarde
+            </label>
         </div>
         <br>
-
         <div class="medium-6 columns">
             <label for="DiaSemana">Dia da Semana:</label>
-            <input type="text" name="DiaSemana" class="form-control" placeholder="domingo ou sábado"/>
+            <label class="radio-inline">
+                <input type="radio" name="DiaSemana" id="inlineRadio1" value="sabado">Sábado
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="DiaSemana" id="inlineRadio2" value="domingo">Domingo
+            </label>
         </div>
         <br>
         <div class="columns">
